Fix: few UI stuff (#811)
* fix question from notification for mobile

* fix bookmarks and notifications layouts in mobile

* fix heading spacing

* fix space consistency in posts.

* decreased unwanted space

* fix link preview for mobile (youtube)

* hide Feed text for mobile as does not needed.

* improved question answer UI

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -70,5 +70,9 @@ particleEffect {
 @tailwind utilities;
 
 #link-preview-card iframe {
+    display: block;
     width: 100%;
+    max-width: 100%;
+    height: auto;
+    aspect-ratio: 446 / 251;
 }
